--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Build outputs
 dist/
@@ -50,6 +51,11 @@ config/production.json
 # Electron user data (settings, etc)
 userData/
 
+# Example and temporary files
+readmeexample.md
+*.example
+*.tmp
+
 # macOS
 .DS_Store
 .AppleDouble
@@ -62,6 +68,3 @@ Desktop.ini
 
 # Linux
 *~
-
-# npm package-lock (optional - uncomment if you want to ignore it)
-# package-lock.json
